Update Dark Mode + Minor Fix

--- a/src/input.css
+++ b/src/input.css
@@ -7,17 +7,17 @@
 }
 
 body{
+  @apply transition-colors duration-1000;
   font-family: 'Inter', sans-serif;
 }
 
 .navbar-fixed {
-  @apply fixed z-[9999] bg-white bg-opacity-70;
-  backdrop-filter: blur(5px);
+  @apply fixed z-[9999] bg-white bg-opacity-70 backdrop-blur-sm dark:bg-dark dark:bg-opacity-50;
   box-shadow: inset 0 -1px 0 0 rgba(0,0,0, 0.1);
 }
 
 .hamburger-line{
-  @apply w-[30px] h-[2px] my-2 block bg-dark;
+  @apply w-[30px] h-[2px] my-2 block bg-dark dark:bg-white;
 }
 
 /* Selector Combinator > */
@@ -32,4 +32,20 @@ body{
 
 .hamburger-active > span:nth-child(3){
   @apply -rotate-45;
+}
+
+#dark-toggle:checked ~ label div.toggle-circle{
+  @apply translate-x-7;
+}
+
+.ft-white{
+  filter:  invert(100%) sepia(0%) saturate(0%) hue-rotate(93deg) brightness(103%) contrast(103%);
+}
+
+.ft-black{
+  filter:  invert(0%) sepia(7%) saturate(28%) hue-rotate(234deg) brightness(107%) contrast(106%);
+}
+
+.ft-yellow{
+  filter: invert(70%) sepia(71%) saturate(688%) hue-rotate(1deg) brightness(105%) contrast(104%);
 }
